kubernetes-deploy/nodejs-api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
spec:
  selector:
    matchLabels:
      app: fullstack-template
  replicas: 7
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: fullstack-template
    spec:
      containers:
      - name: service-a
        image: service-a-build
        imagePullPolicy: Never
        ports:
        - containerPort: 8090
