kubernetes-deploy/scw-deploy.yaml
apiVersion: v1
kind: Pod
metadata:
	name: service-a-pod
	labels:
		zone: prod
		version: v1
spec:
	containers:
	-	name: service-a-ctr
		image: service-a-build
		ports:
		-	containerPort: 8090
