kubernetes-deploy/service-a-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: service-a-pod
  labels:
    zone: prod
    version: v1
spec:
  containers:
  - name: service-a-ctr
    image: service-a-build
    imagePullPolicy: Never
    ports:
    - containerPort: 8090
