kubernetes-deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fullstack-template-svc
  labels:
    app: fullstack-template
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: fullstack-template
